Set body position to relative to hide overflow and avoid scrolling for mobile devices

--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -1,5 +1,6 @@
 html, body {
   overflow: hidden;
+  position: relative;
   height: 100vh;
 }
 
